--- a/TechnogenicSoilPollution/Window/AboutProgramForm.resx
+++ b/TechnogenicSoilPollution/Window/AboutProgramForm.resx
@@ -117,11 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="github" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\github.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="email" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\email.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Вашему вниманию представлено программное средство, 
+включающее в себя базу данных измерений в
+определенных точках местности, а также 
+расчётный модуль, который позволяет получить 
+пространственную картину загрязнения.</value>
   </data>
 </root>
