--- a/TechnogenicSoilPollution/Window/AboutProgramForm.resx
+++ b/TechnogenicSoilPollution/Window/AboutProgramForm.resx
@@ -124,4 +124,102 @@
 расчётный модуль, который позволяет получить 
 пространственную картину загрязнения.</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAJCQAAAEAIACIFQAAFgAAACgAAAAkAAAASAAAAAEAIAAAAAAAQBQAABMLAAATCwAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8AAAAAAAAAAAAAAAAAAAAAVgAAAOgAAAD/ADQ0/wBraf8AT07/AE9O/wBr
+        af8ANDT/AAAA/wAAAOcAAABVAAAAAAAAAAD///8A////AP///wD///8A////AP///wAFBYsABQWLAAUF
+        iwAFBYsABQWLAAUFiwAFBYsABQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8DA03/AAAA/wAB
+        Af8AeXf7AJWU+gB/ffQAPT30AD099AB/ffQAlZT5AHl3+QABAf8AAAD/AAAAcQAAAAD///8A////AP//
+        /wD///8A////AP///wAFBYsABQWLAAUFiwAFBYsABQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wMDYP8AAAD/AAAC/wC+wP8A6OT/AAAB/wAAAP8AAAD/AAAA/wAAAP8AAAD+AOjk/wDE
+        wvcAAAD7AAAA/wAAAE7///8A////AP///wD///8A////AP///wAFBYsABQWLAAUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWD/wAACP8ABQX/AKWn/wD///8A5eT/ADc5/wAA
+        AP8AAAD/AAAA/wAAAP8AODf5AObk/gD///8Aqqj2AAUF/wAAAPH///8A////AP///wD///8A////AP//
+        /wAFBYsABQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/AwNK/wAA
+        AP8AZ2n/AP///wDU0f8A9PH/AJ+p/wAADf8AAAD/AAAA/wAAAOkArqzoAPTx/wDU0f8A////AGpo+QAA
+        AP////8A////AP///wD///8A////AP///wAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        iwAFBYsABQWLAAUFiwAFBYsAAAAAzgAWFf8A0s/8AObj/wDW0/8A19T/AN3c/wCsrP8AwL3/AMC9/wCs
+        rP8A4N37ANfU/wDW0/8A5uP/ANLP/QAWFf////8A////AP///wD///8A////AP///wAFBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFiwAFBYsABQWLAAUFiwAFBYsABQWLAAUFiwAFBYsAAAAA+ABOTP8A//7/AOPf/wDl
+        4v8A5OH/AN7b/wDm5/8AlqH/AJWh/wDm5/8A3tv/AOTh/wDl4v8A49//AP/+/wBOTP////8A////AP//
+        /wD///8A////AP///wAFBYv/BQWL/wUFi/8FBYv/BQWLAAUFiwAFBYsABQWLAAUFiwAFBYsABQWLAAUF
+        i/8FBYv/AAAA/wBKSf8A7+z/AMzJ/wDMyf8AzMn/AP/8/wB+if8AAAv/AAAL/wB+if8A//z/AMzJ/wDM
+        yf8AzMn/AO/s/wBKSf////8A////AP///wD///8A////AP///wAFBYv/BQWL/wUFi/8FBYv/BQWLAAUF
+        iwAFBYsABQWLAAUFiwAFBYsABQWL/wUFi/8FBYv/AAAA/wBraf8AnZv/AAsL/wALC/8ACwv+AMPA+QCf
+        qP8AAAv/AAAL/wCfqP8Aw8D5AAsL/gALC/8ACwv/AJ6c/wBsav////8A////AP///wD///8A////AP//
+        /wAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFiwAFBYsABQWLAAUFiwAFBYsABQWL/wUFi/8FBYv/AAAE/wB9
+        e/8AkI7/AAAA/wAAAP8AAAD9ARQt/wGzxf8AiZT/AImU/wGzxf8AFxfPAAAA/QAAAP8AAAD/AJiW/wB5
+        dv////8A////AP///wD///8A////AP///wAFBYsABQWL/wUFi/8FBYv/BQWL/wUFi/8FBYsABQWLAAUF
+        iwAFBYv/BQWL/wUFi/8FBYv/AQEb/wBSUf8Aq6n7AAAA/AAAAP8AAAD/AAAD/wBjYf8A////AP///wBj
+        Yf8AAAD7AAAA/wAAAP8AAADyAHRy6AA4N/////8A////AP///wD///8A////AP///wAFBYsABQWLAAUF
+        i/8FBYv/BQWL/wUFi/8FBYsABQWLAAUFi/8FBYv/BQWL/wUFi/8FBYv/AwNK/wAAAP8AqKf/AFhW/QAA
+        AP8AAAD/AAAD/wE1Sf8A+vb/APr2/wA9PdoAAAD6AAAA/wAAAP8AS0rzAIqJ7QAAAP////8A////AP//
+        /wD///8A////AP///wAFBYsABQWLAAUFiwAFBYsABQWL/wUFiwAFBYsABQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWD/wAAB/8AFhb/AKms/wBNTP8AAAD/AAAO/wCjoNcA8Oz/APDs/wCjoNYAAADmAAAA/wBN
+        TP4AtbL6ACAg/wAAAPH///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYsABQWLAAUF
+        iwAFBYsABQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wMDX/8AAAD/ABoc/wCvrfQAU1L9AEdG6ADu
+        6v0A2db/ANnW/wDu6v0AR0boAFNS/ACvrfcAGhn7AAAA/wAAAE////8A////AP///wD///8A////AP//
+        /wAAAAAAAAAAAAAAAAAFBYsABQWLAAUFiwAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8DA03/AAAA/wAQEP8AfHr3AM7L+QD//f8A8u7/APLu/wD//f8Azsv5AHx69wAQEP8AAAD/AAAAcgAA
+        AAD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYsABQWLAAUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/AwNc/wAADP8AAAD/AB0c/wBQT/8ASUj/AElI/wBQ
+        T/8AHRz/AAAA/wAAAOgAAABWAAAAAAAAAAD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAA
+        AAAFBYsABQWLAAUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        gf8DA0r/AAAAxQAAAPUAAAD/AAAA/wAAAPUAAADFAAAAeAAAABMAAAAAAAAAAAAAAAD///8A////AP//
+        /wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYsABQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFiwAAAAAAAAAAAAAAAAD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYsABQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        iwAAAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wAAAAAAAAAAAAAAAAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAA
+        AAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/+Pj6//j4+v/4+Pr/+Pj6/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi//4+Pr/+Pj6//j4
+        +v/4+Pr/+Pj6//j4+v8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAAAAD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi//4+Pr/+Pj6//j4+v/4+Pr/+Pj6//j4+v8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8AAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wAAAAAAAAAAAAAAAAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi//4+Pr/+Pj6//j4+v/4+Pr/+Pj6//j4
+        +v8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i//4+Pr/+Pj6//j4+v/4+Pr/+Pj6//j4+v8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAA
+        AAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/+Pj6//j4+v/4+Pr/+Pj6/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8AAAAAAAAAAAAAAAD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYsABQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8AAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wAAAAAAAAAAAAAAAAAFBYsABQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFiwAAAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYsABQWLAAUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWLAAUFiwAAAAAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAAAAAAAAAA
+        AAAFBYsABQWLAAUFiwAFBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUFi/8FBYv/BQWL/wUF
+        i/8FBYsABQWLAAUFiwAAAAAAAAAAAAAAAAD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wAAAAAAAAAAAAAAAAAFBYsABQWLAAUFiwAFBYsABQWLAAUFi/8FBYv/BQWL/wUF
+        i/8FBYv/BQWL/wUFi/8FBYv/BQWLAAUFiwAFBYsABQWLAAUFiwAAAAAAAAAAAAAAAAD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///wAMAAAAP/4AAAQAAAA/8AAAAAAAAD/AAAAAAAAAP4A
+        AAAAAAAA/APgAAAAAAD8H+AAAAAAAPw/gAAAAAAA/D8AAAAAAAD8HwAAAAAAAP4OAAAAAAAA/wwAAAAA
+        AAD/2AAAAAAAAP/4AAAAAAAA//AAABAAAAD/4AAAMAAAAP/gAABwAAAA/8AAP/AAAAD/wAA/8AAAAP+A
+        AB/wAAAA/4AAH/AAAAD/gAAf8AAAAP+AAB/wAAAA/4AAH/AAAAD/gAAf8AAAAP+AAB/wAAAA/4AAH/AA
+        AAD/gAAf8AAAAP/AAB/wAAAA/8AAP/AAAAD/4AB/8AAAAP/wAP/wAAAA//wD//AAAAD/////8AAAAP//
+        ///wAAAA//////AAAAA=
+</value>
+  </data>
 </root>
