--- a/TechnogenicSoilPollution/Window/AboutProgramForm.resx
+++ b/TechnogenicSoilPollution/Window/AboutProgramForm.resx
@@ -118,19 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label1.Text" xml:space="preserve">
-    <value>Вашему вниманию представлено программное средство, 
-включающее в себя базу данных измерений в определенных 
-точках местности, а также расчётный модуль, который 
-позволяет получить пространственную картину загрязнения.</value>
+    <value>Вашему вниманию представлено программное средство, включающее в
+себя базу данных измерений в определенных точках местности, а также
+расчётный модуль, который позволяет получить пространственную 
+картину загрязнения.</value>
   </data>
   <data name="label7.Text" xml:space="preserve">
     <value>Главная - страница с начальной информацией;
-База Данных - страница с таблицей из базы данных, которая
-нужна для внесения измерений в определённых точках;
-Рассчёт - страница с картой и рассчётным модулем для 
-рассчёта примеси;
-Справка - окно с более подробной информацией о приложениии
-и обратной связью с разработчиком.
+База Данных - страница с таблицей из базы данных, которая нужна для 
+внесения измерений в определённых точках;
+Рассчёт - страница с картой и рассчётным модулем для рассчёта примеси;
+Справка - окно с более подробной информацией о приложениии и обратной 
+связью с разработчиком.
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
