--- a/TechnogenicSoilPollution/Properties/Resources.resx
+++ b/TechnogenicSoilPollution/Properties/Resources.resx
@@ -127,4 +127,10 @@
   <data name="github" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\github.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Rose-Wind-1996" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Rose-Wind-1996.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Rose-Wind-1997" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Rose-Wind-1997.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
