Bug fixes in window display

--- a/TechnogenicSoilPollution/Forms/ReferenceProgramForm.resx
+++ b/TechnogenicSoilPollution/Forms/ReferenceProgramForm.resx
@@ -121,7 +121,7 @@
     <value>Главная - страница с начальной информацией;
 База Данных - страница с таблицей из базы данных, которая нужна для 
 внесения измерений в определённых точках;
-Рассчёт - страница с картой и рассчётным модулем для рассчёта примеси;
+Рассчёт - страница с картой и рассчётным модулем для расчёта примеси;
 Справка - окно с более подробной информацией о приложениии и обратной 
 связью с разработчиком.
 </value>
