Correcting mail in the feedback section

--- a/TechnogenicSoilPollution/Forms/ReferenceProgramForm.resx
+++ b/TechnogenicSoilPollution/Forms/ReferenceProgramForm.resx
@@ -121,7 +121,8 @@
     <value>Главная - страница с начальной информацией;
 База Данных - страница с таблицей из базы данных, которая нужна для 
 внесения измерений в определённых точках;
-Расчёт - страница с картой и расчётным модулем для расчёта примеси;
+Расчёт - страница с картой и расчётным модулем для расчёта и 
+визуализации полей загрязнения;
 Справка - окно с более подробной информацией о приложениии и обратной 
 связью с разработчиком.
 </value>
