--- a/TechnogenicSoilPollution/Forms/ReferenceProgramForm.resx
+++ b/TechnogenicSoilPollution/Forms/ReferenceProgramForm.resx
@@ -119,20 +119,10 @@
   </resheader>
   <data name="materialLabel1.Text" xml:space="preserve">
     <value>Описание:
-Вашему вниманию представлено программное средство, включающее в
-себя базу данных измерений в определенных точках местности, а также
-расчётный модуль, который позволяет получить пространственную 
-картину загрязнения.</value>
-  </data>
-  <data name="materialLabel2.Text" xml:space="preserve">
-    <value>Структрура приложения:
-Главная - страница с начальной информацией;
-База Данных - страница с таблицей из базы данных, которая нужна для 
-внесения измерений в определённых точках;
-Расчёт - страница с картой и расчётным модулем для расчёта и 
-визуализации полей загрязнения;
-Справка - окно с более подробной информацией о приложениии и 
-обратной связью с разработчиком.</value>
+Вашему вниманию представлено программное 
+средство, включающее в себя базу данных измерений 
+в определенных точках местности, а также расчётный 
+модуль, который позволяет получить пространственную картину загрязнения.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
