--- a/TechnogenicSoilPollution/Properties/Resources.resx
+++ b/TechnogenicSoilPollution/Properties/Resources.resx
@@ -127,16 +127,19 @@
   <data name="Rose-Wind-1997" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Rose-Wind-1997.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-<data name="Error" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Error" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Error.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-<data name="Info" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Info" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-<data name="Question" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Question" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Question.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-<data name="Warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Warning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_app" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\icon-app.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
